--- a/testimonial.html
+++ b/testimonial.html
@@ -43,7 +43,7 @@
     <div class="container-fluid fixed-top px-0 wow fadeIn" data-wow-delay="0.1s">
         <div class="top-bar row gx-0 align-items-center d-none d-lg-flex">
             <div class="col-lg-6 px-5 text-start">
-                <small><i class="fa fa-map-marker-alt me-2"></i>24 Street,Vector Road,USA</small>
+                <small><i class="fa fa-map-marker-alt me-2"></i>24 Street, Meera Road, Nagpur</small>
                 <small class="ms-4"><i class="fa fa-envelope me-2"></i>foodymart@gmail.com</small>
             </div>
             <div class="col-lg-6 px-5 text-end">
@@ -185,7 +185,7 @@
                 </div>
                 <div class="col-lg-3 col-md-6">
                     <h4 class="text-light mb-4">Address</h4>
-                    <p><i class="fa fa-map-marker-alt me-3"></i>24 Street,Vector Road,USA</p>
+                    <p><i class="fa fa-map-marker-alt me-3"></i>24 Street, Meera Road, Nagpur </p>
                     <p><i class="fa fa-phone-alt me-3"></i>+086-324-8954</p>
                     <p><i class="fa fa-envelope me-3"></i>foodymart@gmail.com</p>
                 </div>
